// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: default 1`] = `
<withRouter(App)
  currentEdition="community"
  fetchPendingPlugins={[Function]}
  location={
    Object {
      "hash": "",
      "key": "key",
      "pathname": "/path",
      "query": Object {},
      "search": "",
      "state": Object {},
    }
  }
  pendingPlugins={
    Object {
      "installing": Array [],
      "removing": Array [],
      "updating": Array [],
    }
  }
  standaloneMode={true}
  updateCenterActive={false}
/>
`;

exports[`should render correctly: update center active 1`] = `
<withRouter(App)
  currentEdition="community"
  fetchPendingPlugins={[Function]}
  location={
    Object {
      "hash": "",
      "key": "key",
      "pathname": "/path",
      "query": Object {},
      "search": "",
      "state": Object {},
    }
  }
  pendingPlugins={
    Object {
      "installing": Array [],
      "removing": Array [],
      "updating": Array [],
    }
  }
  updateCenterActive={true}
/>
`;
